<resources>
    <string name="app_name">QhaliKay</string>
    <string name="inicio">Inicio</string>
    <string name="calorias">Calorias</string>
    <string name="comida">Comidas</string>
    <string name="ejercicios">Ejercicio</string>
    <string name="ayuda">Ayuda</string>
    <string name="salir">Salir</string>
    <string name="actividad2">Login</string>
    <string name="vegetal1">Brocoli</string>
    <string name="vegetal2">Berenjena</string>
    <string name="vegetal3">Zanahoria</string>
    <string name="vegetal4">Espinaca</string>
    <string name="vegetal5">Pimiento</string>
    <string name="verMas">ver más</string>

    <string name="facebook_app_id">352386961952149</string>
    <string name="fb_login_protocol_scheme">fb352386961952149</string>
    <string name="welcome">Bienvenido</string>
    <string name="cancel_login">Se canceló la operación</string>
    <string name="error_login">Ocurrió un error al ingresar</string>
    <string name="logout">Cerrar sesión</string>
    <string name="firebase_error_login">Error al iniciar sesión en Firebase</string>

    <string name="not_log_in">No se pudo iniciar sesión</string>
    <string name="log_out">Log Out</string>
    <string name="revoke">Revoke</string>
    <string name="not_close_session">No se pudo cerrar sesión</string>
    <string name="not_revoke">No se pudo revocar el acceso</string>
</resources>
